test/programs/valid/class_structure/package_import.java
import java.util.*;

protected class A {
  public A() {}
  protected Vector c;
}

