test/programs/invalid/constructors/omitted_constructor.java
  protected class A {
    /* public A() {} */
  }

